(Fix) Footer button text overflow
Footer button text overflows and causes horizontal scrolling. This
change makes it wrap onto new lines.

--- a/resources/assets/sass/main/_custom.scss
+++ b/resources/assets/sass/main/_custom.scss
@@ -11199,6 +11199,10 @@ body.movie .movie-heading, body.movie .movie-poster, body.tvshow .movie-heading,
   padding: 0;
 }
 
+#l-footer .l-footer-section > a {
+    white-space: normal;
+}
+
 .home .home-newsboxes {
   margin: 1.25em auto;
 }
